--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "laravel/laravel",
-    "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "name": "laravel/universal",
+    "type": "library",
+    "description": "une librairie des models universel à utilisé dans laravel",
+    "keywords": ["library", "laravel universal model"],
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
@@ -25,7 +25,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "packages\\": "packages/"
+            "laravel\\universal\\": "packages/"
         }
     },
     "autoload-dev": {
