change vendor name

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "laravel/universal",
+    "name": "asddaniel/laravel-universal",
     "type": "library",
     "description": "une librairie des models universel à utilisé dans laravel",
     "keywords": ["library", "laravel universal model"],
